trying you know

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -14,18 +15,24 @@
   <div class="container">
 
     <div id="first-card" class="card">
-      <h1>Hello, I'm Leo👌</h1>
+      <h1>Hello, I'm Leo 😎</h1>
       <img src="images/picture.png" alt="Profile Picture">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, autem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus blanditiis voluptatum commodi eligendi veniam! Magnam voluptate reiciendis tenetur veniam quis a, maiores quia corrupti atque enim fuga itaque praesentium, accusantium.</p>
-      <a id="btn-red" href="">Get in touch now!</a>
+      <a id="btn-red" href="mailto:leo.siebold@hotmail.de">Get in touch now</a>
     </div>
 
-    <div class="card">
+    <div id="first-card" class="card">
+      <h2>Hobbies</h2>
+      <p>My biggest passion is to play Hockey 🏑 at the SAFO hockeyclub in Frankfurt. If you would like to become part of the team feel free to <a id="red-font" href="http://www.sportclub-safo.de/hockey/mannschaften/1-herren/">CONTACT US</a>.</p>
+      <a id="btn-red" href="https://www.hockey.de/VVI-web/default.asp?lokal=DHB&innen=/VVI-web/Ergebnisdienst/Ligen-BUR.asp&auswahl=Feld&liga=REG-SU2-H&modus=1">Current Table</a>
+    </div>
+
+    <div id="first-card" class="card">
       <h2>Follow me</h2>
       <ul class="list-inline">
-        <li> <a href="https://www.facebook.com/leo.siebold?ref=bookmarks"><i class="fab fa-facebook-square"></i></a>  </li>
-        <li><a href="https://www.instagram.com/leo_siebold/"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="https://github.com/Turrow"><i class="fab fa-github-square"></i></a></li>
+        <li> <a id="hover-black" href="https://www.facebook.com/leo.siebold?ref=bookmarks"><i class="fab fa-facebook-square"></i></a>  </li>
+        <li><a id="hover-black" href="https://www.instagram.com/leo_siebold/"><i class="fab fa-instagram"></i></a></li>
+        <li><a id="hover-black" href="https://github.com/Turrow"><i class="fab fa-github-square"></i></a></li>
 
       </ul>
     </div>
@@ -36,4 +43,6 @@
 </body>
 
 </html>
+
+
 
