trying you know

--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
     </div>
 
     <div id="first-card" class="card">
+      <h2>Cities I've lived in</h2>
+      <ul class="list-inline" class="zoom-hover id="bigger-img">
+        <li><img src="images/frankfurt.png" alt="Frankfurt"></li>
+        <li><img src="images/whangarei.png" alt="Whangarei"></li>
+        <li><img src="images/barcelona.png" alt="Barcelona"></li>
+      </ul>
+    </div>
+
+    <div id="first-card" class="card">
       <h2>Follow me</h2>
       <ul class="list-inline">
         <li> <a id="hover-black" href="https://www.facebook.com/leo.siebold?ref=bookmarks"><i class="fab fa-facebook-square"></i></a>  </li>
         <li><a id="hover-black" href="https://www.instagram.com/leo_siebold/"><i class="fab fa-instagram"></i></a></li>
         <li><a id="hover-black" href="https://github.com/Turrow"><i class="fab fa-github-square"></i></a></li>
-
       </ul>
     </div>
 
