--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="first-card" class="card">
       <h2>Cities I've lived in</h2>
-      <ul class="list-inline" class="zoom-hover id="bigger-img">
+      <ul class="list-inline" class="zoom-hover>
         <li><img src="images/frankfurt.png" alt="Frankfurt"></li>
         <li><img src="images/whangarei.png" alt="Whangarei"></li>
         <li><img src="images/barcelona.png" alt="Barcelona"></li>
